--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "tsx server.ts",
+    "server:update": "tsx server.ts --enable-update",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -19,6 +21,7 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
+    "node-cron": "^4.2.1",
     "pdf-parse": "^2.4.5",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.12",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
